--- a/diaz-profile/index.html
+++ b/diaz-profile/index.html
@@ -20,11 +20,8 @@
             <p>Hey, there! I am thrilled to start the course, because I want to learn new skills, that will —hopefully— let me work remotely so I can travel more.</p>
             <p>My superpower is to change and adapt, I left my country over 6 years ago and I am eager to keep moving around.</p>
           </div>
-          <!-- <div class="button">
-            <button onclick="window.location.href='mailto:nunciaddiaz@gmail.com';">
-          </div>-->
-          <div class=button
-          <a href="mailto:nunciaddiaz@gmail.com" target="_blank">Let's Connect</a.>
+          <div class="button"
+          a href="mailto:nunciaddiaz@gmail.com" target="_blank">Let's Connect</a.>
           </div>
           </div>
         </div>
